--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -1,3 +1,45 @@
-.wy-side-nav-search {
-    background-color: #000000
+
+@import url('https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:700');
+
+.wy-side-nav-search{
+    background-color: #323232;
 }
+
+.wy-menu-vertical header,.wy-menu-vertical p.caption {
+    color: #29ffd0 !important;
+}
+
+.wy-nav-content {
+    margin: auto;
+}
+
+a.icon-home {
+    display: none
+}
+
+body {
+    font-family: Comfortaa;
+}
+
+h1, h2, h3 {
+    font-family: Comfortaa;
+    font-size: 20px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 2.14;
+    letter-spacing: 0.4px;
+    color: #323232;
+}
+
+p {
+    color: #5e5e5e;
+    font-family: 'Open Sans';
+    font-size: 1em;
+    font-style: normal;
+    font-stretch: normal;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:700');
